--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					var button = this;
 					var modal = new MercorModal.Confirm({
 						'title': 'Confirm',
-						'html': 'Want to change the button color?',
+						'html': 'Do you want to change the button color?',
 						'confirm':{
 							'callback': function(){
 								button.setStyle('background-color',['pink', 'red', 'green', 'purple'].getRandom());
